[workspace]
resolver = "3"
members = [
  "ucftp_sender",
  "ucftp_receiver",
  "ucftp_shared"
]

[workspace.package]
rust-version = "1.86"
edition = "2024"
license = "AGPL-3.0-or-later"
authors = ["Andrius Pukšta <andrius.puksta@gmail.com>"]
repository = "https://github.com/yjhn/ucftp"
description = "Unidirectional Control and Data Transfer Protocol"

# See: https://nnethercote.github.io/perf-book/build-configuration.html
[profile.release]
lto = "fat"
codegen-units = 1
# backtraces will not indicate file/line
# but allows to eliminate unwinding code from panic locations
panic = "abort"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
hpke = { path = "hpke_custom", version = "0.13", default-features = false, features = ["x25519"] }
rand = "0.9.1"
log = { version = "0.4.27", features = ["release_max_level_info"] }
env_logger = { version = "0.11.8", default-features = false, features = ["color", "humantime"] }
raptorq = "2"
mimalloc = "0.1.46"
