[package]
name = "ucftp_receiver"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
hpke.workspace = true
clap.workspace = true
rand.workspace = true
log.workspace = true
env_logger.workspace = true
raptorq.workspace = true
ucftp_shared = { path = "../ucftp_shared" }
libc = "0.2.172"
socket2 = "0.5.9"
