[package]
name = "ucftp_sender"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
hpke.workspace = true
rand.workspace = true
ucftp_shared = { path = "../ucftp_shared" }
