[package]
name = "ucftp_sender"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
hpke.workspace = true
rand.workspace = true
log.workspace = true
env_logger.workspace = true
raptorq.workspace = true
ucftp_shared = { path = "../ucftp_shared" }
