[package]
name = "ucftp_shared"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
hpke.workspace = true
clap.workspace = true
log.workspace = true
base64 = { version = "0.22.1", default-features = false }
rand_core = "0.9.3"
